assets/css/main.css
/* Variables 
----------------------------- */
:root {
  /* Colors */
  --dark: #141414;
  --violet: #7734FE;
  --violet-d: #553bab;
  --violet-dd: #422e85;
  --ultra-violet: #430BFF;
  
  --color-name: var(--violet);
  --color-text: var(--violet-d);
  --color-heading: var(--violet-dd);
  --color-bg: var(--dark);
  --color-border: var(--violet-dd);

  /* Typography */
  --base-font-size: 16px;
  --font-serif: 'Editorial New', ui-serif, Georgia, Cambria, 'Times New Roman', Times, serif;
  /* --font-sans: 'Supply Sans', ui-monospace, 'Cascadia Code', 'Source Code Pro', Menlo, Consolas, 'DejaVu Sans Mono', monospace; */

  /* Measures */
  --border: 1px solid var(--color-border);
  --base-pad: 1rem;
  --base-margin: 1.5rem;
  --grid-gap: 3rem;
  --main-content-offset-top: 2rem;
  --section-margin: calc(3 * var(--base-margin));
  --site-gutter: 3rem;

  /* Motion
  ------------------- */
  --ease-in: cubic-bezier(.895,.03,.685,.22);
  --ease-out: cubic-bezier(.165,.84,.44,1);
  --ease-in-out: cubic-bezier(0.65, 0.05, 0.36, 1);
  --ease-authentic-motion: cubic-bezier(0.4,0,0.2,1);
  --cubic-screen-wipe: cubic-bezier(.79,.14,.15,.86);
}

@media (min-width: 750px) {
  :root {
    --grid-gap: 4.5rem;
    --main-content-offset-top: 10rem;
    --section-margin: calc(4 * var(--base-margin));
    --site-gutter: 2rem;
  }
}

@media (min-width: 1024px) {
  :root {
    --base-font-size: 18px;
    --main-content-offset-top: 15rem;
    --site-gutter: 3rem;
  }
}

@media (min-width: 1440px) {
  :root {
    --grid-gap: 6rem;
    --main-content-offset-top: 18rem;
  }
}

@media (min-width: 1800px) {
  :root {
    --base-font-size: 20px;
    --main-content-offset-top: 11rem;
  }
}


/* Fonts 
------------------- */
@font-face {
  font-family: 'Editorial New';
  src: url('../fonts/EditorialNew/PPEditorialNew-UltraboldItalic.otf');
  font-style: italic;
  font-weight: 800;
  font-display: swap;
}

@font-face {
  font-family: 'Editorial New';
  src: url('../fonts/EditorialNew/PPEditorialNew-Italic.otf');
  font-style: italic;
  font-weight: 400;
  font-display: swap;
}

/* @font-face {
  font-family: 'Editorial New';
  src: url('../fonts/EditorialNew/PPEditorialNew-Regular.otf');
  font-style: normal;
  font-weight: 400;
  font-display: swap;
} */

/* @font-face {
  font-family: 'Supply Sans';
  src: url('../fonts/SupplySans/PPSupplySans-Regular.otf');
  font-style: normal;
  font-weight: 400;
  font-display: swap;
} */


/* Utility 
------------------- */
.sr-only {
  clip: rect(0 0 0 0);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.nowrap {
  display: block;
  white-space: nowrap;
}

.list-style-none {
  list-style: none;
  margin: 0;
  padding-left: 0;
}


/* Base 
----------------------------- */
body {
  background-color: var(--color-bg);
  color: var(--color-text);
  font-family: var(--font-serif);
  font-size: var(--base-font-size);
  font-style: italic;
  font-weight: 400;
  line-height: 1.6;
  overflow-x: hidden;
  padding: 0;
  position: relative;
  -webkit-font-smoothing: antialiased;
}

::selection {
  background-color: var(--ultra-violet);
  color: white;
}

::-moz-selection {
  background-color: var(--ultra-violet);
  color: white;
}

ul li,
ol li {
  margin-bottom: 5px;
}

ul li:last-child,
ol li:last-child {
  margin-bottom: 0;
}

a,
a:visited {
  color: var(--color-text);
  text-decoration: underline;
  text-underline-offset: 2px;
  text-decoration-thickness: 2px;
  transition: none;
}

a:hover,
a:focus {
  color: var(--ultra-violet);
  text-decoration-color: var(--ultra-violet);
}


/* Site container 
----------------------------- */
.site-container {
  display: grid;
  grid-template-rows: auto 1fr auto;
  grid-template-columns: 100%;
  min-height: 100svh;
  overflow: hidden;
  padding: 0 var(--site-gutter);
  position: relative;
}


/* Sections 
----------------------------- */
.section {
  margin-bottom: var(--section-margin);
}

.section__heading {
  color: var(--color-heading);
  font-family: var(--font-serif);
  font-size: var(--base-font-size);
  font-style: italic;
  font-weight: 800;
  line-height: 1.2;
  margin-bottom: var(--base-margin);
  padding-bottom: calc(var(--base-pad) / 2);
  position: relative;
}

.section__heading::after {
  background-color: var(--color-border);
  bottom: 0;
  content: '';
  display: block;
  height: 1px;
  position: absolute;
  right: 0;
  width: 100vw;
}


/* Grid 
----------------------------- */
.grid {
  display: grid;
  gap: var(--grid-gap);
  grid-template-columns: 1fr;
  margin-left: auto;
  margin-right: auto;
  max-width: 45ch;
  width: 100%;
}

.grid__main-content {
  padding-top: var(--main-content-offset-top);
}

@media (min-width: 750px) {
  .grid {
    grid-template-columns: 2fr min(45ch, 100%);
    margin-left: 0;
    margin-right: 0;
    max-width: 100%;
  }
  .grid__main-content {
    grid-column: 2;
  }
}

@media (min-width: 1024px) {
  .grid {
    grid-template-columns: 2fr min(45ch, 100%) 1fr;
  }
}

@media (min-width: 1440px) {
  .grid {
    grid-template-columns: 1fr min(50ch, 100%) 1fr;
  }
}


/* Name Grid 
----------------------------- */
.grid__name {
  color: var(--color-name);
  display: grid;
  gap: var(--base-margin);
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-rows: repeat(6, auto) 1fr;
  max-width: 460px;
  width: 100%;
  z-index: 5;
}

@media (min-width: 1024px) {
  .grid__name {
    max-width: 100%;
  }
}

.letter svg {
  height: auto;
}

.letter--o {
  transform: scale(1.4) translate(-10%, 15%);
}


/* Page Transition
----------------------------- */
@keyframes disappear {
  0% {
    display: block;
  }
  to {
    display: none;
  }
}

@keyframes fade-out {
  0% {
    opacity: 1;
  }
  to {
    opacity: 0;
  }
}

@keyframes slide-down {
  0% {
    transform: translateY(0)
  }
  to {
    transform: translateY(100%)
  }
}

@keyframes scale-blur {
  0% {
    transform: scale(5);
  }
  to {
    transform: scale(1);
  }
}

.screen-wipe {
  animation: 
    slide-down 1s var(--cubic-screen-wipe) 0s 1 forwards,
    fade-out 0s linear 1s 1 forwards;
  background-color: #2e2e2e;
  color: white;
  height: 100lvh;
  pointer-events: none;
  position: absolute;
  top: 0;
  user-select: none;
  width: 100%;
  z-index: 15;
}

.screen-wipe--2 {
  animation: 
    slide-down 1s var(--cubic-screen-wipe) 0.5s 1 forwards,
    fade-out 0s linear 1.5s 1 forwards;
  background-color: #212121;
}


/* Absolute elements 
----------------------------- */
canvas.noise {
  animation: scale-blur 0s var(--cubic-screen-wipe) 0.75s 1 forwards;
  height: 100lvh;
	opacity: 0.05;
	pointer-events: none;
  position: fixed;
  transform: scale(5);
	user-select: none;
  width: 100vw;
  z-index: 9999;
}

